Slight alignment adjustments and misc fixes.

--- a/UI/src/styles/showEnvironment.css
+++ b/UI/src/styles/showEnvironment.css
@@ -11,3 +11,7 @@
     width: 100%;
     margin: auto;
 }
+
+td {
+    vertical-align: middle;
+}
